# python-templates

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  python_template.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
tests/: test_fizzbuzz.py
