[tool.poetry]
name = "python-template"
version = "0.0.1"
description = "Awesome project."
authors = ["515hikaru <12kojima.takahiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
