[tool.poetry]
name = "python-template"
version = "1.0.2"
description = "This is a project template."
authors = ["515hikaru <12kojima.takahiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
pylint = "^2.4.3"
pytest = "^5.2.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.scripts]
sample = "python_template:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
